--- a/day10/Day10Study/MyPortfolioWebApp/Views/Board/Delete.cshtml
+++ b/day10/Day10Study/MyPortfolioWebApp/Views/Board/Delete.cshtml
@@ -4,61 +4,54 @@
     ViewData["Title"] = "Delete";
 }
 
-<section id="news" class="section">
-    <div class="container section-title" data-aos="fade-up">
-        <h2>자유게시판</h2>
-        <p>자유롭게 작성하시면 됩니다.</p>
-    </div>
+<h1>Delete</h1>
 
-    <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div>
-            <h4>삭제</h4>
-            <h5>정말 삭제하시겠습니까?</h5>
-            <hr />
-            <dl class="row">
-                <dt class = "col-sm-2">
-                    @Html.DisplayNameFor(model => model.Email)
-                </dt>
-                <dd class = "col-sm-10">
-                    @Html.DisplayFor(model => model.Email)
-                </dd>
-                <dt class = "col-sm-2">
-                    @Html.DisplayNameFor(model => model.Writer)
-                </dt>
-                <dd class = "col-sm-10">
-                    @Html.DisplayFor(model => model.Writer)
-                </dd>
-                <dt class = "col-sm-2">
-                    @Html.DisplayNameFor(model => model.Title)
-                </dt>
-                <dd class = "col-sm-10">
-                    @Html.DisplayFor(model => model.Title)
-                </dd>
-                <dt class = "col-sm-2">
-                    @Html.DisplayNameFor(model => model.Contents)
-                </dt>
-                <dd class = "col-sm-10">
-                    @Html.DisplayFor(model => model.Contents)
-                </dd>
-                <dt class = "col-sm-2">
-                    @Html.DisplayNameFor(model => model.PostDate)
-                </dt>
-                <dd class = "col-sm-10">
-                    @Html.DisplayFor(model => model.PostDate)
-                </dd>
-                <dt class = "col-sm-2">
-                    @Html.DisplayNameFor(model => model.ReadCount)
-                </dt>
-                <dd class = "col-sm-10">
-                    @Html.DisplayFor(model => model.ReadCount)
-                </dd>
-            </dl>
+<h3>Are you sure you want to delete this?</h3>
+<div>
+    <h4>Board</h4>
+    <hr />
+    <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Writer)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Writer)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Title)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Title)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Contents)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Contents)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PostDate)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PostDate)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ReadCount)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ReadCount)
+        </dd>
+    </dl>
     
-            <form asp-controller="Board" asp-action="Delete" >
-                <input type="hidden" asp-for="Id" />
-                <input type="submit" value="삭제" class="btn btn-sm btn-danger" />
-                <a asp-action="Index" class="btn btn-sm btn-success">리스트</a>
-            </form>
-        </div>
-    </div>
-</section>
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
+</div>
