--- a/코딩테스트/MyPortfolioWebApp/Views/Board/Details.cshtml
+++ b/코딩테스트/MyPortfolioWebApp/Views/Board/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model MyPortfolioWebApp.Models.Board
+﻿@inject SignInManager<CustomUser> SignInManager
+@model MyPortfolioWebApp.Models.Board
 
 @{
     ViewData["Title"] = "Details";
@@ -9,6 +10,8 @@
     <div class="container section-title" data-aos="fade-up">
         <h2>자유게시판</h2>
         <p>자유롭게 작성하시면 됩니다.</p>
+        <p>누구나 작성 및 수정/삭제가 가능합니다</p>
+
     </div>
 
     <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -55,7 +58,6 @@
             </dl>
         </div>
         <div>
-            @* 작성자만 가능하도록 해야하는데/ edit랑 delete는 추후 수정 할 것 *@
             <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-sm btn-warning">수정</a>
             <a asp-action="Delete" asp-route-id="@Model?.Id" class="btn btn-sm btn-danger">삭제</a>
             <a asp-action="Index" class="btn btn-sm btn-success">리스트</a>
