--- a/코딩테스트/MyPortfolioWebApp/Views/Board/Edit.cshtml
+++ b/코딩테스트/MyPortfolioWebApp/Views/Board/Edit.cshtml
@@ -9,6 +9,8 @@
     <div class="container section-title" data-aos="fade-up">
         <h2>자유게시판</h2>
         <p>자유롭게 작성하시면 됩니다.</p>
+        <p>누구나 작성 및 수정/삭제가 가능합니다</p>
+
     </div>
 
     <div class="container" data-aos="fade-up" data-aos-delay="100">
