--- a/day10/Day10Study/MyPortfolioWebApp/Views/Account/Register.cshtml
+++ b/day10/Day10Study/MyPortfolioWebApp/Views/Account/Register.cshtml
@@ -11,43 +11,45 @@
 
     <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
-            <div class="col-md-5">
+            <div class="col-md-4">
                 <form asp-action="Register">
                     <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-group mb-2">
+                    <div class="form-group">
                         <label asp-for="Email">이메일</label>
                         <input asp-for="Email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
 
-                    <div class="form-group mb-2">
-                        <label asp-for="Mobile">전화번호</label>
+                    <div class="form-group">
+                        <label asp-for="Mobile">모바일</label>
                         <input asp-for="Mobile" class="form-control" />
                         <span asp-validation-for="Mobile" class="text-danger"></span>
                     </div>
 
-                    <div class="form-group mb-2">
-                        <label asp-for="City">지역</label>
+                    <div class="form-group">
+                        <label asp-for="City">도시</label>
                         <input asp-for="City" class="form-control" />
                         <span asp-validation-for="City" class="text-danger"></span>
                     </div>
 
-                    <div class="form-group mb-2">
+                    <div class="form-group">
                         <label asp-for="Hobby">취미</label>
                         <input asp-for="Hobby" class="form-control" />
                         <span asp-validation-for="Hobby" class="text-danger"></span>
                     </div>
 
-                    <div class="form-group mb-2">
+                    <div class="form-group">
                         <label asp-for="Password">패스워드</label>
                         <input asp-for="Password" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
+                        <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
+
                     <div class="form-group mb-3">
                         <label asp-for="ConfirmPassword">패스워드 확인</label>
                         <input asp-for="ConfirmPassword" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                     </div>
+
                     <div class="text-end">
                         <button type="submit" class="btn btn-primary">회원가입</button>
                     </div>
@@ -56,3 +58,6 @@
         </div>
     </div>
 </section>
+
+
+
