--- a/day10/Day10Study/MyPortfolioWebApp/Views/Home/Contact.cshtml
+++ b/day10/Day10Study/MyPortfolioWebApp/Views/Home/Contact.cshtml
@@ -1,11 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-
-@model MyPortfolioWebApp.Models.ContactModel
+﻿@model MyPortfolioWebApp.Models.ContactModel
 
 @{
     ViewData["Title"] = "Contact";
+
 }
 
 <!-- Contact Section -->
@@ -53,7 +50,8 @@
             </div>
 
             <div class="col-lg-7">
-                <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+                <form asp-action="Contact" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+                    @* <div asp-validation-summary="All" class="text-danger"></div> *@
                     <div class="row gy-4">
 
                         <div class="col-md-6">
@@ -64,27 +62,25 @@
 
                         <div class="col-md-6">
                             <label asp-for="Email" class="pb-2">이메일</label>
-                            <input type="email" class="form-control" asp-for="Email" >
                             <span asp-validation-for="Email" class="text-danger"></span>
+                            <input type="email" class="form-control" asp-for="Email">
                         </div>
 
                         <div class="col-md-12">
                             <label asp-for="Subject" class="pb-2">제목</label>
-                            <input type="text" class="form-control" asp-for="Subject">
                             <span asp-validation-for="Subject" class="text-danger"></span>
+                            <input type="text" class="form-control" asp-for="Subject">
                         </div>
 
                         <div class="col-md-12">
                             <label asp-for="Message" class="pb-2">메시지</label>
-                            <textarea class="form-control" rows="10" asp-for="Message"></textarea>
                             <span asp-validation-for="Message" class="text-danger"></span>
+                            <textarea class="form-control" rows="10" asp-for="Message"></textarea>
                         </div>
 
-                        <div class="col-md-12 text-center">
-                            <div class="loading" hidden>로딩중</div>
+                        <div class="col-md-12 text-center">             
                             <div class="error-message" hidden></div>
                             <div class="sent-message" hidden>메시지를 전송했습니다. 감사합니다!</div>
-
                             <button type="submit">전송</button>
                         </div>
 
