--- a/day10/Day10Study/MyPortfolioWebApp/Views/News/Details.cshtml
+++ b/day10/Day10Study/MyPortfolioWebApp/Views/News/Details.cshtml
@@ -1,7 +1,5 @@
 ﻿@inject SignInManager<CustomUser> SignInManager
-@inject UserManager<CustomUser> UserManager
-
-
+@inject UserManager<CustomUser> UserManger
 @using Westwind.AspNetCore.Markdown
 @model MyPortfolioWebApp.Models.News
 
@@ -39,6 +37,16 @@
                     @* @Html.DisplayFor(model => model.Description) *@
                     @Markdown.ParseHtmlString(Model.Description)
                 </dd>
+                <!-- 업로드파일 다운로드 영역 -->
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.UploadFile)
+                </dt>
+                <dd class="col-sm-10">
+                    @if (!string.IsNullOrEmpty(Model.UploadFile)) {
+                        <a href="~/upload/@Model.UploadFile" target="_blank">@Model.UploadFile</a>
+                    }
+                </dd>
+
                 <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.PostDate)
                 </dt>
@@ -58,7 +66,7 @@
             {
                 <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-sm btn-warning">수정</a>
                 <a asp-action="Delete" asp-route-id="@Model?.Id" class="btn btn-sm btn-danger">삭제</a>
-            }
+            }            
             <a asp-action="Index" class="btn btn-sm btn-success">리스트</a>
         </div>
     </div>
