--- a/day10/Day10Study/MyPortfolioWebApp/Views/News/Index.cshtml
+++ b/day10/Day10Study/MyPortfolioWebApp/Views/News/Index.cshtml
@@ -1,7 +1,5 @@
 ﻿@inject SignInManager<CustomUser> SignInManager
-@inject UserManager<CustomUser> UserManager
-
-
+@inject UserManager<CustomUser> UserManger
 @model IEnumerable<MyPortfolioWebApp.Models.News>
 
 @{
@@ -34,8 +32,7 @@
                 {
                     <a asp-controller="News" asp-action="Create"
                        class="btn btn-sm btn-success btn-kelly">작성</a>
-                    
-                }
+                }                
             </div>
             <div class="col-6">
                 <form asp-action="Index" method="get">
