--- a/day10/Day10Study/MyPortfolioWebApp/Views/Resume/Index.cshtml
+++ b/day10/Day10Study/MyPortfolioWebApp/Views/Resume/Index.cshtml
@@ -22,12 +22,12 @@
                 <h3 class="resume-title">개요</h3>
 
                 <div class="resume-item pb-0">
-                    <h4>Ryu BoKyung</h4>
+                    <h4>Hugo. MG Sung</h4>
                     <p><em>자신의 경력에 대한 개요 설명</em></p>
                     <ul>
                         <li>부산광역시 남구 신선로 365</li>
-                        <li>+82 010-9592-5787</li>
-                        <li>dbqhrud5789@naver.com</li>
+                        <li>+82 010-6683-7777</li>
+                        <li>personar95@naver.com</li>
                     </ul>
                 </div><!-- Edn Resume Item -->
 
