--- a/day10/Day10Study/MyPortfolioWebApp/Views/Shared/_Layout.cshtml
+++ b/day10/Day10Study/MyPortfolioWebApp/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
-﻿@* 의존적 주입(Dependency Injection)으로 객체 추가 *@
+﻿@* 의존성 주입(Dependency Injection)으로 객체 추가 *@
 @inject SignInManager<CustomUser> SignInManager
-@inject UserManager<CustomUser> UserManager
+@inject UserManager<CustomUser> UserManger
 
 @functions {
     // 아래의 HTML에서만 사용할 C# 메서드 정의
@@ -94,20 +94,23 @@
 
             <div class="header-social-links">
                 <!-- 로그인/회원가입 영역 -->
-                @if (SignInManager.IsSignedIn(User))    // 로그인을 했으면
+                @if (SignInManager.IsSignedIn(User)) // 로그인을 했으면!
                 {
                     <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
-                        <button type="submit" class="link-kelly" title="@User.Identity.Name"><i class="bi bi-unlock2-fill"></i></button>
+                        <button type="submit" class="link-kelly" 
+                                title="@User.Identity.Name"><i class="bi bi-unlock2-fill"></i></button>
                     </form>
                 }
-                else
+                else // 로그인상태가 아니면
                 {
-                    <a asp-controller="Account" asp-action="Login" class="login"><i class="bi bi-lock-fill"></i></a>
-                }
-
-                <a asp-controller="Account" asp-action="Register" class="register"><i class="bi bi-person-fill-add"></i></a>
-                <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/mg-sung-309125261/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    <a asp-controller="Account" asp-action="Login" 
+                       class="login" title="로그인"><i class="bi bi-lock-fill"></i></a>
+                }                
+                <a asp-controller="Account" asp-action="Register" 
+                    class="register" title="회원가입"><i class="bi bi-person-fill-add"></i></a>
+                <a href="#" class="instagram" title="인스타그램"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/mg-sung-309125261/" target="_blank" 
+                    class="linkedin" title="링크드인"><i class="bi bi-linkedin"></i></a>
             </div>
 
         </div>
